--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# Platformio & VCODE
 .pio
+.pioenvs
+.piolibdeps
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
-.vscode/ipch
+.vscode
+
+# ignore local config.h with passwords etc
+config.h
