--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
+.vscode/settings.json
+.vscode/extensions.json
 .vscode
 
 # ignore local config.h with passwords etc
 config.h
+
